Causeview Package Complete/ant script/retrieveUnpackaged/objects/Role_Template__c.object
<CustomObject>
    <description>Used to develop and manage Volunteer Role descriptions</description>
    <fields>
        <fullName>Qualifications__c</fullName>
        <description>Defines the preferred qualifications for the role</description>
        <inlineHelpText>Defines the preferred qualifications for the role (degrees, certifications, etc.)</inlineHelpText>
        <label>Qualifications</label>
        <picklist>
            <picklistValues>
                <fullName>To be defined by organization</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Role_Description__c</fullName>
        <inlineHelpText>Importance of the Job to the Organization&apos;s Purpose</inlineHelpText>
        <label>Role Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Role_Tasks__c</fullName>
        <description>The tasks required in the Volunteer Role</description>
        <inlineHelpText>The tasks required in the Volunteer Role</inlineHelpText>
        <label>Role Tasks</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Skills_And_Experience__c</fullName>
        <description>Required or desired skills and experience</description>
        <label>Skills &amp; Experience</label>
        <picklist>
            <picklistValues>
                <fullName>Ability to Lift Heavy Objects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting/Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Educator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising/PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocacy Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art/Graphic Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career Counselor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Skill: Data Entry and Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Skill: Expert MS Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Skill: Intermediate MS Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Skill: Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culinary Arts/Chef</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Software Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detail Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Childhood Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESL English as Second Language Teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interpersonal Skills</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Special_Requirements__c</fullName>
        <description>Materials needed or special requirements for the role</description>
        <label>Special Requirements</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>This status determines whether the Volunteer Position Description is available for use by Opportunities and Positions</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Proposed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Provided__c</fullName>
        <description>The training that is provided for the specified Volunteer Role</description>
        <label>Training Provided</label>
        <picklist>
            <picklistValues>
                <fullName>Event Orientation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome/Orientation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Specific Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation/Shadowing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Training Required</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Role Template</label>
    <listViews>
        <fullName>View_All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>View All</label>
    </listViews>
    <nameField>
        <label>Description Template Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01Id0000000nNgGEAU_00Nd0000003wkFGEAY</fullName>
        <active>true</active>
        <field>Volunteer_Role__c.Role_Description_Templates__c</field>
        <filterItems>
            <field>Role_Template__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Volunteer Position_Volunteer Position De</name>
    </namedFilters>
    <pluralLabel>Role Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>